# grafana_client

./: .gitignore  Cargo.toml  README.md
grafana-cli/: Cargo.toml
grafana-cli/src/: main.rs
grafana-lib/: Cargo.toml  README.md
grafana-lib/src/: client.rs  error.rs  lib.rs
grafana-lib/src/common/: api.rs  config.rs  error.rs  mod.rs
grafana-lib/src/community/: alerting.rs  alerting_provisioning.rs  annotations.rs  correlations.rs  dashboard.rs  data_source.rs  folder.rs  folder_permissions.rs  mod.rs  organization.rs  preferences.rs  search.rs  snapshot.rs
grafana-lib/src/enterprise/: mod.rs
src/: client.rs  config.rs  lib.rs
src/community/: admin.rs  alerting_provisioning.rs  authentication.rs  dashboard.rs  dashboard_permissions.rs  dashboard_versions.rs  folder.rs  library_element.rs  mod.rs  other.rs  playlists.rs  query_history.rs  short_url.rs  team.rs  user.rs
src/enterprise/: mod.rs
