[package]
name = "grafana_client"
version = "0.1.0"
edition = "2021"
description = "A Rust client for Grafana"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
enterprise = []

[dependencies]
reqwest = "0.11.18"
