[package]
name = "grafana_cli"
version = "0.1.0"
edition = "2021"
description = "Sample usage of Grafana Client"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]

[[bin]]
name = "grafana-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.19", features = ["derive"]}
env_logger = "0.10.0"
grafana-lib = { path = "../grafana-lib" }
log = "0.4.19"
