[package]
name = "grafana-lib"
version = "0.1.0"
edition = "2021"
description = "A Rust client for Grafana"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
enterprise = []

[dependencies]
env = "0.0.0"
env_logger = "0.10.0"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["json","blocking"]}
serde = { version = "1.0.175", features = ["derive"]}
serde_json = "1.0.103"
